--- a/node/htdocs/styles/main.css
+++ b/node/htdocs/styles/main.css
@@ -33,7 +33,7 @@ body
     height: 100%;
     padding: 0;
     overflow:hidden;
-    background-color: lightgray;
+    background-color: lightblue;
 }
 
 .appfooterstatus {
@@ -49,7 +49,7 @@ body
 
 .loginmessage {
     color: #000;
-    border-bottom:1px solid #ccc;
+    border-bottom: 0px solid #ccc;
     font-size:14px;
     font-family:Verdana, Geneva, Arial, Helvetica, sans-serif;
     font-weight: plain;
@@ -70,7 +70,7 @@ body
     width:133px;
     height : 28px;
     margin-top: 2px;
-    background: url('../images/logo.png') no-repeat 35% 23%;
+    xbackground: url('../images/logo.png') no-repeat 35% 23%;
     float: right;
 }
 .large_logo
